<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.lemarck.smartclicker.MainActivity">

    <RelativeLayout
        android:id="@+id/navigator"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/navigator_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/navigator_ok"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/navigator_shape"
            android:text="@string/navigator_ok"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:contentDescription="@string/navigator_ok" />

        <Button
            android:id="@+id/navigator_arrow_up"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_navigator_arrow_up"
            android:contentDescription="@string/navigator_arrow_up" />

        <Button
            android:id="@+id/navigator_arrow_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_navigator_arrow_left"
            android:contentDescription="@string/navigator_arrow_left" />

        <Button
            android:id="@+id/navigator_arrow_right"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_navigator_arrow_right"
            android:contentDescription="@string/navigator_arrow_right" />

        <Button
            android:id="@+id/navigator_arrow_down"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_navigator_arrow_down"
            android:contentDescription="@string/navigator_arrow_down" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
